chore: Various code cleanup