@@ -8,9 +8,11 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import uniresolver.driver.Driver;
 
+import java.lang.reflect.InvocationTargetException;
+
 public class InitServlet extends HttpServlet implements Servlet {
 
-	private static Logger log = LoggerFactory.getLogger(InitServlet.class);
+	private static final Logger log = LoggerFactory.getLogger(InitServlet.class);
 
 	private static Driver driver = null;
 
@@ -33,13 +35,13 @@ public class InitServlet extends HttpServlet implements Servlet {
 			try {
 
 				driverClass = driverClassName == null ? null : (Class<? extends Driver>) Class.forName(driverClassName);
-				driver = driverClass == null ? null : driverClass.newInstance();
-			} catch (ClassNotFoundException | InstantiationException | IllegalAccessException ex) {
+				driver = driverClass == null ? null : driverClass.getConstructor().newInstance();
+			} catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException ex) {
 
 				throw new ServletException(ex.getMessage(), ex);
 			}
 
-			if (driver == null) throw new ServletException("Unable to load driver: " + driverClassName);
+			if (driver == null) throw new ServletException("Unable to load driver: (no 'Driver' init parameter)");
 
 			if (log.isInfoEnabled()) log.info("Loaded driver: " + driverClass);
 		}
